# MaNguonMo

./: build.gradle  settings.gradle
backend/: .env  Cargo.toml
backend/migrations/: 20260430094318_create_initial_tables.sql
backend/src/: main.rs
backend/src/handlers/: auth.rs
backend/src/models/: user.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/common/: ProductCard.vue
frontend/src/components/home/: CategoryList.vue  HeroBanner.vue  ServiceFeatures.vue  SidebarMenu.vue
frontend/src/components/layout/: Footer.vue  Header.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  AccountView.vue  CartView.vue  CheckoutView.vue  ContactView.vue  ForgotPasswordView.vue  HomeView.vue  LoginView.vue  NotFoundView.vue  ProductDetailView.vue  RegisterView.vue  WishlistView.vue
src/main/resources/: application.properties
src/main/resources/static/css/: admin.css  auth.css  cart.css  checkout.css  header.css  product-detail.css  shop.css  style.css  wishlist.css
src/main/resources/static/js/: main.js
src/main/resources/templates/: 404.html  cart.html  checkout.html  forgot-password.html  index.html  login.html  product-detail.html  products.html  profile.html  register.html  wishlist.html
src/main/resources/templates/admin/: admin-customers.html  admin-orders.html  admin-product-add.html  admin-products.html  dashboard.html
src/main/resources/templates/fragments/: header.html
(+15 files in other folders)
