[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Framework & Async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

# Database (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Môi trường & Utils
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

bcrypt = "0.15"

tower-http = { version = "0.5", features = ["cors"] }

jsonwebtoken = "9.2"